2008-08-25  Sebastien Pouliot  <sebastien@ximian.com> 

	* IRunner.cs: Add DefectsLimit property and TearDown method to 
	the interface.
	* Runner.cs: Implement defaults for DefectsLimit and TearDown.

2008-08-25  Sebastien Pouliot  <sebastien@ximian.com>

	* Confidence.cs: Update Low comments.
	* IRule.cs: Add TearDown(IRunner) to the interface.
	* Rule.cs: Add default, empty, TearDown implementation.
	* Severity.cs: Fix typo in comments.

2008-08-25  Sebastien Pouliot  <sebastien@ximian.com> 

	* FxCopCompatibilityAttribute.cs: New. Attribute to map between
	the Gendarme rule and one, or many, semi-equivalent FxCop rule.
	* Severity.cs: Add new Audit level.

2008-08-24  Sebastien Pouliot  <sebastien@ximian.com>

	* ProblemAttribute.cs, SolutionAttribute.cs: Change Inherited to 
	true, other wise we would miss some descriptions in a few rules.

2008-08-08  Sebastien Pouliot  <sebastien@ximian.com>

	* Rule.cs: Set default ApplicabilityScope value to All. Otherwise
	the wizard would not report the same number of defects than the
	console runner.

2008-07-15  Sebastien Pouliot  <sebastien@ximian.com>

	* Runner.cs: Nullify currentRule and currentTarget in case an 
	exception is thrown after Run was executed (e.g. while reporting)

2008-07-07  Sebastien Pouliot  <sebastien@ximian.com>

	* AssemblyResolver.cs: Catch FileNotFoundException coming from 
	Cecil's	BaseAssemblyResolver. Look for assemblies where the current
	one (being analyzed) was loaded. Return null when a Resolve call 
	fails. Use generics where appropriate. Stop tracking changes from 
	the original linker source code.
	* Runner.cs: Use the CacheAssembly method instead of the collection
	itself. This allows us to do a bit more work unrelated to the runners.

2008-06-29  Sebastien Pouliot  <sebastien@ximian.com>

	* BasicIgnoreList.cs: Avoid exception if an ignored rule is not
	part of the rule set being executed.

2008-06-02  Nestor Salceda  <nestor.salceda@gmail.com>
